Add theme files

--- a/theme.toml
+++ b/theme.toml
@@ -12,4 +12,4 @@ min_version = "0.41.0"
 
 [author]
   name = "Yasuharu Ozaki"
-  homepage = ""
+  homepage = "https://github.com/yasuoza/hugo-theme-singular"
