--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v2.3.1
+        with:
+          path: singular
 
       - name: Use Node.js
         uses: actions/setup-node@v1.4.2
