--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,7 @@ updates:
   schedule:
     interval: daily
   open-pull-requests-limit: 10
-- package-ecosystem: javascript
+- package-ecosystem: npm
   directory: "/"
   schedule:
     interval: daily
