--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ defaults:
 
 jobs:
   test:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     name: Run stylelint and site build test
     steps:
       - name: Check out code
@@ -26,20 +26,21 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v2.1.4
         with:
-          node-version: 14.x
+          node-version: 16.x
 
       - name: Get dependencies
-        run: yarn install
+        run: npm install
 
       - name: Run stylelint
-        run: yarn run stylelint "assets/**/*.scss"
+        run: npx stylelint "assets/**/*.scss"
 
       - name: Setup Hugo
-        uses: peaceiris/actions-hugo@v2.4.13
+        uses: peaceiris/actions-hugo@v2.5.0
         with:
-          hugo-version: '0.80.0'
+          hugo-version: '0.90.1'
           extended: true
 
       - name: Build site
+        timeout-minutes: 1
         run: |
           hugo --verbose --contentDir='./exampleSite' --config='./exampleSite/config.toml'
