--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "devDependencies": {
     "stylelint": "14.1.0",
     "stylelint-config-standard": "24.0.0",
+    "stylelint-config-standard-scss": "^3.0.0",
     "stylelint-scss": "4.0.1"
   },
   "dependencies": {
